@@ -3,6 +3,7 @@ h1. CHANGELOG
 
 h2. 1.0.11 June 29, 2011
 
+* add 'Skeleton Boilerplate' (getskeleton.com) option to 'html5' recipe
 * update gem 'cucumber-rails' from 1.0.0 to 1.0.2
 * update gem 'factory_girl_rails' from 1.1.beta1 to 1.1.beta3
 * update gem 'devise' from 1.3.4 to 1.4.0
